/**
 * Created by qfeng on 2018/12/29
 */

syntax = "proto3";

option cc_enable_arenas = true;
option java_outer_classname = "AttributeBunchPb";
option java_multiple_files = true;
option java_package = "algocomp";

import "attrpb/attribute_data.proto";

package algocomp;

message AttributeBunch {
    map<string, AttributeData> attrs = 1;
}