/**
 * Created by qfeng on 2018/12/29
 */

syntax = "proto3";

option cc_enable_arenas = true;
option java_outer_classname = "ContFeatDataPb";
option java_multiple_files = true;
option java_package = "algocomp";

package algocomp;

message ContFeatData {
    string gname = 1;
    string fname = 2;
    float fval = 3;
}